Fixing issue where selected tab style is not showing up.  Issue is that the default tab styles are overriding the selected tab styles. Added tab class for the user profile.

--- a/media/default/css/site_tabs.css
+++ b/media/default/css/site_tabs.css
@@ -1,12 +1,17 @@
 /* SITE-SPECIFIC TAB STYLING */
 
 /* Active tabs */
+/*
 #home_tab a.tab_home,
-#products_tab a.tab_products,
-#support_tab a.tab_support,
-#about_us_tab a.tab_about_us
+#resources_tab a.tab_resources,
+#energy_tab a.tab_energy,
+#about_us_tab a.tab_about_us,
+#billboard_tab a.tab_billboard,
+#kukui_tab a.tab_kukui,
+#user_tab a.tab_user
 {
     background-color: #999;
     border-color: #888;
     color: #FFF;
 }
+*/
